# inspect-claim-support

./: .gitignore  CITATION.cff  README.md  pyproject.toml
inspect_claim_support/: __init__.py  _registry.py  scorers.py
tests/: test_claim_support.py
